tests/errors/sem_undefined2.java
public class sem_undefined2 {
    public static void main(String[] args) {
        a();
    }
}
